# Homer

./: .gitignore  LICENSE  README.md  pyproject.toml
homer/: __init__.py  __main__.py  cli.py  config.py  detector.py  fixer.py  output.py  pdf_utils.py  pixels.py  rects.py  similarity.py  text_classify.py  worker.py  zorder.py
